Bizfi Production/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Owner_3_Ownership__c</fullName>
        <label>Owner 3 Ownership %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_3_SSN__c</fullName>
        <label>Owner 3 SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_3_Title__c</fullName>
        <label>Owner 3 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_4_Direct_Phone__c</fullName>
        <label>Owner 4 Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_4_Email__c</fullName>
        <label>Owner 4 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_4_First_Name__c</fullName>
        <label>Owner 4 First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_4_Last_Name__c</fullName>
        <label>Owner 4 Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_4_Mobile__c</fullName>
        <label>Owner 4 Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_4_SSN__c</fullName>
        <label>Owner 4 SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_4_Title__c</fullName>
        <label>Owner 4 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_Months__c</fullName>
        <label>Peak Months</label>
        <picklist>
            <controllingField>Seasonal_Business__c</controllingField>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preapproved_Amount__c</fullName>
        <label>Preapproved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preapproved_By__c</fullName>
        <label>Preapproved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preapproved_Program_Length_months__c</fullName>
        <label>Preapproved Program Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Financing_Balance__c</fullName>
        <label>Previous Financing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Financing_Type__c</fullName>
        <label>Previous Financing Type</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profitable_last_year__c</fullName>
        <label>Profitable last year?</label>
        <picklist>
            <picklistValues>
                <fullName>Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reassigned_to_Rep_48_Hr_Rule_Date_Time__c</fullName>
        <label>Reassigned to Rep - 48 Hr Rule Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reset_and_Reassign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers workflow to reset Lead Status, Sub Status and qualifies for Reassignment Rule</description>
        <label>Reset and Reassign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restricted_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesforceInstance__c</fullName>
        <formula>Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesforceInstance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Id__c</fullName>
        <formula>RIGHT(Id, 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Terms__c</fullName>
        <label>Search Terms</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Searchable_via_Widget__c</fullName>
        <formula>IF (  AND(Owner:User.LastName = &apos;Storage Account&apos;,  ISPICKVAL(Status, &apos;Open - Attempting Contact&apos;)), true, false)</formula>
        <label>Searchable via Widget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seasonal_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seasonal Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Program_Length_Months__c</fullName>
        <label>Selected Program Length (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_to_InsideSales__c</fullName>
        <formula>/*
AND( OwnerId = &apos;00Go0000002BKq2&apos;, 
FirstName  = &apos;valerie&apos;, 
LastName = &apos;papa&apos;,
Campaign_Source__c = &apos;BizFi&apos;,
Is_API_Lead__c,
Lead_Status_Category__c = &apos;Active&apos;,
NOT(Inside_Sales_Unanswered__c), Do not remove
NOT(Inside_Sales_Answer__c), Do not remove
NOT(ISNULL(Phone)) Do not remove
)
*/

AND(
OwnerId = &apos;00Go0000002BKq2&apos;,
AND( NOT ( FirstName = &apos;valerie&apos; ) , NOT ( LastName = &apos;papa&apos; ) , NOT ( Phone = &apos;2125551212&apos; ) ),
Is_API_Lead__c,
NOT( Inside_Sales_Unanswered__c ),
NOT( Inside_Sales_Answer__c ),
NOT( ISNULL( Phone )),
ISPICKVAL( Duplicate_Reason__c, &quot;&quot; ),
ISPICKVAL( Status, &quot;Open - Not Contacted&quot; )
)</formula>
        <label>Send to InsideSales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shopping_Cart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shopping Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Incorporation__c</fullName>
        <label>State of Incorporation</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sub ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Dials__c</fullName>
        <description>Total of Current and Legacy Dials</description>
        <formula>qbdialer__Dials__c +  Legacy_Dials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Entity__c</fullName>
        <label>Type of Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <label>Web Source</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Contacted_Date_Time__c</fullName>
        <label>Working - Contacted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X12_Days_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>12 Days Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_Days_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Days Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5LINX_Rep_Name__c</fullName>
        <label>5LINX Rep Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5LINX_Rep_Number__c</fullName>
        <label>5LINX Rep Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5LINX_Rep_RIN__c</fullName>
        <label>5LINX Rep RIN</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X8_Days_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8 Days Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmblre__Assignment_Rule_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Rule Member</label>
        <referenceTo>cmblre__Assignment_Rule_Member__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cmblre__Reassign_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadScoring__Campaign_Score__c</fullName>
        <description>Sum of all the lead scoring rules from campaign member lead scoring rules</description>
        <inlineHelpText>Sum of all the lead scoring rules from campaign member lead scoring rules</inlineHelpText>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Priority__c</fullName>
        <formula>if( leadScoring__Total_Lead_Score__c &lt;30,&quot;C&quot;,if(leadScoring__Total_Lead_Score__c &lt;50, &quot;B&quot;, &quot;A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Total_Lead_Score__c</fullName>
        <description>Sum of Campaign Score and Lead Score</description>
        <formula>leadScoring__Campaign_Score__c  +leadScoring__Lead_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Campaign Score and Lead Score</inlineHelpText>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Contactability Score was last updated</description>
        <label>NeuralView: Contactability Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScoreId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The InsideSales.com NeuralView Hourly Contactability Score Object Lookup</description>
        <label>NeuralView: Hourly Contactability ID</label>
        <referenceTo>qbdialer__ContactScore__c</referenceTo>
        <relationshipLabel>Contact Score Items</relationshipLabel>
        <relationshipName>Contact_Score_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__ContactScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Contactability Score</description>
        <label>NeuralView: Contactability Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.  It should be incremented each time the Lead is dialed.</description>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Lead.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Leads History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Campaign_Source__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open - Not Contacted,Open - Attempting Contact,Working - Contacted</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>Bizfi_Only</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_to_be_Reassigned</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>McaApp__Sub_Status__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Campaign_Source__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>is o</value>
        </filters>
        <filters>
            <field>LEAD.DO_NOT_CALL</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Future Client,Closed - Lost,Closed - Converted,Closed - Unqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>is c</value>
        </filters>
        <label>Leads to be Reassigned</label>
        <language>en_US</language>
        <sharedTo>
            <role>Operations_Administrator</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_to_be_Reassigned_Future_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>McaApp__Sub_Status__c</columns>
        <columns>Campaign_Source__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Closed_Future_Client_Date_Time__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>qbdialer__LastCallTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed - Future Client</value>
        </filters>
        <filters>
            <field>Closed_Future_Client_Date_Time__c</field>
            <operation>lessThan</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>Leads to be Reassigned - Future Clients</label>
        <language>en_US</language>
        <sharedTo>
            <role>Marketing</role>
            <role>Opener_Admin</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_to_be_Reassigned_stor2</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <columns>LEAD.STATUS</columns>
        <columns>McaApp__Sub_Status__c</columns>
        <columns>Campaign_Source__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>FULL_NAME</columns>
        <columns>qbdialer__LastCallTime__c</columns>
        <columns>qbdialer__Dials__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>McaApp__Sub_Status__c</field>
            <operation>equals</operation>
            <value>Time in Business too Short,Not Interested,Unresponsive</value>
        </filters>
        <filters>
            <field>Campaign_Source__c</field>
            <operation>notContain</operation>
            <value>Nav</value>
        </filters>
        <filters>
            <field>Campaign_Source__c</field>
            <operation>notContain</operation>
            <value>Capital Advance Solutions</value>
        </filters>
        <filters>
            <field>Campaign_Source__c</field>
            <operation>notContain</operation>
            <value>Bankers Healthcare</value>
        </filters>
        <filters>
            <field>Campaign_Source__c</field>
            <operation>notContain</operation>
            <value>Profit</value>
        </filters>
        <filters>
            <field>Campaign_Source__c</field>
            <operation>notContain</operation>
            <value>PTIN</value>
        </filters>
        <filters>
            <field>Campaign_Source__c</field>
            <operation>notContain</operation>
            <value>Unqual</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>stor2</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Duplicate_Reason__c</field>
            <operation>equals</operation>
        </filters>
        <label>Leads to be Reassigned - stor2</label>
        <language>en_US</language>
        <sharedTo>
            <role>Marketing</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mailer_Leads</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4 OR 5)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Campaign_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Mailer</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open - Not Contacted</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>klee</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>is o</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>is c</value>
        </filters>
        <label>Mailer Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>Marketing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>McaApp__New_Leads_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New Leads This Week</label>
        <language>en_US</language>
    </listViews>
</CustomObject>